compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__block.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\nfn go() {\n  let x = {\n    1\n    2\n  }\n  x\n}\n"
---
----- SOURCE CODE

fn go() {
  let x = {
    1
    2
  }
  x
}


----- COMPILED JAVASCRIPT
function go() {
  let x = (() => {
    1n;
    return 2n;
  })();
  return x;
}
