compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__block_with_parenthesised_expression_returning_from_function.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\nfn b() {\n  {\n    1 + 2\n  }\n}\n"
---
----- SOURCE CODE

fn b() {
  {
    1 + 2
  }
}


----- COMPILED JAVASCRIPT
function b() {
  return 1n + 2n;
}
