compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__blocks_returning_functions.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\nfn b() {\n  {\n    fn(cb) { cb(1) }\n  }\n  {\n    fn(cb) { cb(2) }\n  }\n  3\n}\n"
---
----- SOURCE CODE

fn b() {
  {
    fn(cb) { cb(1) }
  }
  {
    fn(cb) { cb(2) }
  }
  3
}


----- COMPILED JAVASCRIPT
function b() {
  ((cb) => { return cb(1n); });
  ((cb) => { return cb(2n); });
  return 3n;
}
