compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__blocks_returning_use.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\nfn b() {\n  {\n    use a <- fn(cb) { cb(1) }\n    a\n  }\n  {\n    use b <- fn(cb) { cb(2) }\n    b\n  }\n  3\n}\n    "
---
----- SOURCE CODE

fn b() {
  {
    use a <- fn(cb) { cb(1) }
    a
  }
  {
    use b <- fn(cb) { cb(2) }
    b
  }
  3
}
    

----- COMPILED JAVASCRIPT
function b() {
  ((cb) => { return cb(1n); })((a) => { return a; });
  ((cb) => { return cb(2n); })((b) => { return b; });
  return 3n;
}
