compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__left_operator_sequence.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\nfn go() {\n  1 == {\n    1\n    2\n  }\n}\n"
---
----- SOURCE CODE

fn go() {
  1 == {
    1
    2
  }
}


----- COMPILED JAVASCRIPT
function go() {
  return 1n === (() => {
    1n;
    return 2n;
  })();
}
