compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__nested_multiexpr_blocks.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\nfn go() {\n  let x = {\n    1\n    {\n      2\n      3\n    }\n  }\n  x\n}\n"
---
----- SOURCE CODE

fn go() {
  let x = {
    1
    {
      2
      3
    }
  }
  x
}


----- COMPILED JAVASCRIPT
function go() {
  let x = (() => {
    1n;
    return (() => {
      2n;
      return 3n;
    })();
  })();
  return x;
}
