compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__right_operator_sequence.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\nfn go() {\n  {\n    1\n    2\n  } == 1\n}\n"
---
----- SOURCE CODE

fn go() {
  {
    1
    2
  } == 1
}


----- COMPILED JAVASCRIPT
function go() {
  return (() => {
    1n;
    return 2n;
  })() === 1n;
}
